deployments/k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: root-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: root-app
  template:
    metadata:
      labels:
        app: root-app
    spec:
      containers:
      - name: root-service
        image: YOUR_DOCKER_USERNAME/root-service:latest
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: api-app
  template:
    metadata:
      labels:
        app: api-app
    spec:
      containers:
      - name: api-service
        image: YOUR_DOCKER_USERNAME/api-service:latest
        ports:
        - containerPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: info-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: info-app
  template:
    metadata:
      labels:
        app: info-app
    spec:
      containers:
      - name: info-service
        image: YOUR_DOCKER_USERNAME/info-service:latest
        ports:
        - containerPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-app
  template:
    metadata:
      labels:
        app: login-app
    spec:
      containers:
      - name: login-service
        image: YOUR_DOCKER_USERNAME/login-service:latest
        ports:
        - containerPort: 8083
